--- a/beatles/index.html
+++ b/beatles/index.html
@@ -9,11 +9,38 @@
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <title>Document</title>
+    <title>The Beatles</title>
 </head>
 <body>
     <header>
-        Beatles
+        <!-- Nav -->
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navbar">
+	<a class="navbar-brand" href="index.html">
+		<img class="image-fluid" src="assets/img/Beatles1.jpg" alt="Logo" title="Logo"/>
+	</a>
+
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+			aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+​
+	<div class="collapse navbar-collapse" id="navbarNavDropdown">
+		<ul class="navbar-nav ml-auto uppercase">
+			<li class="nav-item">
+				<a class="nav-link" href="filepath to page or section here">Home<span class="sr-only">(current)</span></a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="filepath to page or section here">Discography</a>
+			</li>
+            <li class="nav-item">
+				<a class="nav-link" href="filepath to page or section here">Media</a>
+			</li>
+            <li class="nav-item">
+				<a class="nav-link" href="filepath to page or section here">Book Us</a>
+			</li>
+		</ul>
+	</div>
+</nav>
     </header>
     <section>
 
