--- a/beatles/home.html
+++ b/beatles/home.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
@@ -13,34 +14,36 @@
 </head>
 <body>
     <header>
-        <!-- Nav -->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navbar">
-	<a class="navbar-brand" href="index.html">
-		<img class="image-fluid" src="assets/img/Beatles1.jpg" alt="Logo" title="Logo"/>
-	</a>
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navbar">
 
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-			aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
+	        <a class="navbar-brand" href="home.html">
+		        <img class="image-fluid" src="assets/img/Beatles1.jpg" alt="Logo" title="Logo"/>
+	        </a>
 ​
-	<div class="collapse navbar-collapse" id="navbarNavDropdown">
-		<ul class="navbar-nav ml-auto uppercase">
-			<li class="nav-item">
-				<a class="nav-link" href="filepath to page or section here">Home<span class="sr-only">(current)</span></a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="filepath to page or section here">Discography</a>
-			</li>
-            <li class="nav-item">
-				<a class="nav-link" href="filepath to page or section here">Media</a>
-			</li>
-            <li class="nav-item">
-				<a class="nav-link" href="filepath to page or section here">Book Us</a>
-			</li>
-		</ul>
-	</div>
-</nav>
+	        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+			aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+		        <span class="navbar-toggler-icon"></span>
+	        </button>
+​
+	
+	        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+		        <ul class="navbar-nav ml-auto uppercase">
+			        <li class="nav-item">
+				        <a class="nav-link" href="home.html">Home<span class="sr-only">(current)</span></a>
+			        </li>
+			        <li class="nav-item">
+				        <a class="nav-link" href="filepath to page or section here">Discography</a>
+			        </li>
+                    <li class="nav-item">
+				        <a class="nav-link" href="filepath to page or section here">Media</a>
+			        </li>
+                    <li class="nav-item">
+				        <a class="nav-link" href="filepath to page or section here">Book Us</a>
+			        </li>
+		        </ul>
+	        </div>
+        </nav>
+        
     </header>
     <section>
 
