--- a/beatles/home.html
+++ b/beatles/home.html
@@ -32,13 +32,13 @@
 				        <a class="nav-link" href="home.html">Home<span class="sr-only">(current)</span></a>
 			        </li>
 			        <li class="nav-item">
-				        <a class="nav-link" href="filepath to page or section here">Discography</a>
+				        <a class="nav-link" href="discography.html">Discography</a>
 			        </li>
                     <li class="nav-item">
-				        <a class="nav-link" href="filepath to page or section here">Media</a>
+				        <a class="nav-link" href="media.html">Media</a>
 			        </li>
                     <li class="nav-item">
-				        <a class="nav-link" href="filepath to page or section here">Book Us</a>
+				        <a class="nav-link" href="book-us.html">Book Us</a>
 			        </li>
 		        </ul>
 	        </div>
@@ -56,5 +56,8 @@
             <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
         </ul>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
