--- a/beatles/home.html
+++ b/beatles/home.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navbar">
 
 	        <a class="navbar-brand" href="home.html">
-		        <img class="img-fluid"src="assets/img/Beatles1.jpg" alt="Logo" title="Logo" style="height: 7rem;"/>
+		        <img class="img-fluid" src="assets/img/Beatles1.jpg" alt="Logo" title="Logo" style="height: 7rem;"/>
 	        </a>
 ​
 	        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -43,8 +43,37 @@
         </nav>
         
     </header>
-    <section id="intro">
-        hello
+    <section id="band-members">
+      <h2 id="band-name">The Beatles</h2>
+        <div id="left-about">
+          <div class="left-about-heading">
+            <h2>Paul McCartney <i class=""></i></h2>
+            <hr>
+            <p>Info about Paul.</p>
+          </div>
+          <div class="left-about-heading">
+            <h2>George Harrison <i class=""></i></h2>
+            <hr>
+            <p>Info about George.</p>
+          </div>
+        </div>
+        <div id="right-about">
+          <div class="right-about-heading">
+            <h2>Ringo Starr <i class=""></i></h2>
+            <hr>
+            <p>Info about Ringo</p>
+          </div>
+          <div class="right-about-heading">
+            <h2>John Lennon <i class=""></i></h2>
+            <hr>
+            <p>Info about John.</p>
+          </div>
+        </div>
+        <div id="center-about">
+          <div id="circle-container">
+            <div id="circle-cover-bg"></div>
+          </div>
+        </div>
     </section>
     <footer>
         <ul class="social-networks">
