--- a/beatles/book-us.html
+++ b/beatles/book-us.html
@@ -47,12 +47,22 @@
         <form>
             <div class="form-row">
                 <div class="form-group col-md-6">
-                <label for="inputEmail4">Email</label>
-                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                <label for="inputEmail4">First Name</label>
+                <input type="email" class="form-control" id="inputEmail5" placeholder="First Name">
                 </div>
                 <div class="form-group col-md-6">
-                <label for="inputPassword4">Password</label>
-                <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+                <label for="inputPassword4">Last Name</label>
+                <input type="password" class="form-control" id="inputPassword5" placeholder="Last Name">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                <label for="inputEmail4">Email</label>
+                <input type="email" class="form-control" id="inputEmail4" placeholder="Email Address">
+                </div>
+                <div class="form-group col-md-6">
+                <label for="inputPassword4">Phone Number</label>
+                <input type="password" class="form-control" id="inputPassword4" placeholder="Phone Number">
                 </div>
             </div>
             <div class="form-group">
@@ -76,19 +86,11 @@
                 </select>
                 </div>
                 <div class="form-group col-md-2">
-                <label for="inputZip">Zip</label>
-                <input type="text" class="form-control" id="inputZip">
+                <label for="inputPostCode">Post Code</label>
+                <input type="text" class="form-control" id="inputPostCode">
                 </div>
             </div>
-            <div class="form-group">
-                <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="gridCheck">
-                <label class="form-check-label" for="gridCheck">
-                    Check me out
-                </label>
-                </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Sign in</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </section>
     <footer>
