--- a/beatles/book-us.html
+++ b/beatles/book-us.html
@@ -43,7 +43,7 @@
         </nav>
         
     </header>
-    <section>
+    <section id="book-us-form">
         <form>
             <div class="form-row">
                 <div class="form-group col-md-6">
@@ -71,26 +71,19 @@
             </div>
             <div class="form-group">
                 <label for="inputAddress2">Address 2</label>
-                <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                <input type="text" class="form-control" id="inputAddress2" placeholder="Town">
             </div>
             <div class="form-row">
                 <div class="form-group col-md-6">
                 <label for="inputCity">City</label>
                 <input type="text" class="form-control" id="inputCity">
                 </div>
-                <div class="form-group col-md-4">
-                <label for="inputState">State</label>
-                <select id="inputState" class="form-control">
-                    <option selected>Choose...</option>
-                    <option>...</option>
-                </select>
-                </div>
-                <div class="form-group col-md-2">
+                <div class="form-group col-md-6">
                 <label for="inputPostCode">Post Code</label>
                 <input type="text" class="form-control" id="inputPostCode">
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary submit-button">Submit</button>
         </form>
     </section>
     <footer>
