--- a/beatles/book-us.html
+++ b/beatles/book-us.html
@@ -47,11 +47,11 @@
         <form>
             <div class="form-row">
                 <div class="form-group col-md-6">
-                <label for="inputEmail4">First Name</label>
+                <label for="FirstName">First Name</label>
                 <input type="email" class="form-control" id="inputEmail5" placeholder="First Name">
                 </div>
                 <div class="form-group col-md-6">
-                <label for="inputPassword4">Last Name</label>
+                <label for="LastName">Last Name</label>
                 <input type="password" class="form-control" id="inputPassword5" placeholder="Last Name">
                 </div>
             </div>
