Replace float system with grid system on Home page

--- a/beatles/home.html
+++ b/beatles/home.html
@@ -44,35 +44,23 @@
         
     </header>
     <section id="band-members">
-      <h2 id="band-name">The Beatles</h2>
-        <div id="left-about">
-          <div class="left-about-heading">
-            <h2>Paul McCartney <i class=""></i></h2>
-            <hr>
-            <p>Info about Paul.</p>
-          </div>
-          <div class="left-about-heading">
-            <h2>George Harrison <i class=""></i></h2>
-            <hr>
-            <p>Info about George.</p>
-          </div>
-        </div>
-        <div id="right-about">
-          <div class="right-about-heading">
-            <h2>Ringo Starr <i class=""></i></h2>
-            <hr>
-            <p>Info about Ringo</p>
-          </div>
-          <div class="right-about-heading">
-            <h2>John Lennon <i class=""></i></h2>
-            <hr>
-            <p>Info about John.</p>
-          </div>
-        </div>
-        <div id="center-about">
-          <div id="circle-container">
-            <div id="circle-cover-bg"></div>
-          </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                1
+                </div>
+                <div class="col-6">
+                2
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                1
+                </div>
+                <div class="col-6">
+                2
+                </div>
+            </div>
         </div>
     </section>
     <footer>
