Smooth out grid sytem, add in container class and content about Paul

--- a/beatles/home.html
+++ b/beatles/home.html
@@ -51,30 +51,28 @@
                         <h2 class="subheading">The Beatles</h2>
                     </div>
                     <div class="row band-info">
-                        <p>
+                        <p class="band-info-p">
                             "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
                         </p>
-                        <p> 
+                        <p class="band-info-p"> 
                             "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-6">
-                <img src="assets/img/Paul1.jpg" alt="Paul McCartney" class="paul-george">
+        </div>
+        <div class="container-fluid">
+            <div class="row paul-john">
+                <div class="col-6 col-sm-3">
+                    <img src="assets/img/Paul1.jpg" alt="Paul McCartney" class="paul-george">
                 </div>
-                <div class="col-md-6">
-                2
+                <div class="col-6 col-sm-3">
+                    <h3>Paul McCartney <i class=""></i></h3>
+                    <hr>
+                    <p>Paul played instruments and did other stuff too for the band when he felt like it. Sometimes he played the bassoon.</p>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                1
-                </div>
-                <div class="col-md-6">
-                2
-                </div>
+                <div class="col-6 col-sm-3"></div>
+                <div class="col-6 col-sm-3"></div>
             </div>
         </div>
     </section>
