--- a/beatles/book-us.html
+++ b/beatles/book-us.html
@@ -44,47 +44,49 @@
         
     </header>
     <section id="book-us-form">
-        <form>
-            <div class="form-row">
-                <div class="form-group col-md-6">
-                <label for="FirstName">First Name</label>
-                <input type="email" class="form-control" id="inputEmail5" placeholder="First Name">
+        <div class="container">
+            <form>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                    <label for="FirstName">First Name</label>
+                    <input type="email" class="form-control" id="inputEmail5" placeholder="First Name">
+                    </div>
+                    <div class="form-group col-md-6">
+                    <label for="LastName">Last Name</label>
+                    <input type="password" class="form-control" id="inputPassword5" placeholder="Last Name">
+                    </div>
                 </div>
-                <div class="form-group col-md-6">
-                <label for="LastName">Last Name</label>
-                <input type="password" class="form-control" id="inputPassword5" placeholder="Last Name">
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                    <label for="inputEmail4">Email</label>
+                    <input type="email" class="form-control" id="inputEmail4" placeholder="Email Address">
+                    </div>
+                    <div class="form-group col-md-6">
+                    <label for="inputPassword4">Phone Number</label>
+                    <input type="password" class="form-control" id="inputPassword4" placeholder="Phone Number">
+                    </div>
                 </div>
-            </div>
-            <div class="form-row">
-                <div class="form-group col-md-6">
-                <label for="inputEmail4">Email</label>
-                <input type="email" class="form-control" id="inputEmail4" placeholder="Email Address">
+                <div class="form-group">
+                    <label for="inputAddress">Address</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
                 </div>
-                <div class="form-group col-md-6">
-                <label for="inputPassword4">Phone Number</label>
-                <input type="password" class="form-control" id="inputPassword4" placeholder="Phone Number">
+                <div class="form-group">
+                    <label for="inputAddress2">Address 2</label>
+                    <input type="text" class="form-control" id="inputAddress2" placeholder="Town">
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="inputAddress">Address</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-            </div>
-            <div class="form-group">
-                <label for="inputAddress2">Address 2</label>
-                <input type="text" class="form-control" id="inputAddress2" placeholder="Town">
-            </div>
-            <div class="form-row">
-                <div class="form-group col-md-6">
-                <label for="inputCity">City</label>
-                <input type="text" class="form-control" id="inputCity">
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                    <label for="inputCity">City</label>
+                    <input type="text" class="form-control" id="inputCity">
+                    </div>
+                    <div class="form-group col-md-6">
+                    <label for="inputPostCode">Post Code</label>
+                    <input type="text" class="form-control" id="inputPostCode">
+                    </div>
                 </div>
-                <div class="form-group col-md-6">
-                <label for="inputPostCode">Post Code</label>
-                <input type="text" class="form-control" id="inputPostCode">
-                </div>
-            </div>
-            <button type="submit" class="btn btn-primary submit-button">Submit</button>
-        </form>
+                <button type="submit" class="btn btn-primary submit-button">Submit</button>
+            </form>
+        </div>
     </section>
     <footer>
         <ul class="social-networks">
