Add in information about the Beatles for the home page.

--- a/beatles/home.html
+++ b/beatles/home.html
@@ -52,10 +52,10 @@
                     </div>
                     <div class="row band-info">
                         <p class="band-info-p">
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
+                            The Beatles were an English rock band formed in Liverpool in 1960. The group, whose best-known line-up comprised John Lennon, Paul McCartney, George Harrison and Ringo Starr, are regarded as the most influential band of all time.
                         </p>
                         <p class="band-info-p"> 
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
+                            They were integral to the development of 1960s counterculture and popular music's recognition as an art form. Rooted in skiffle, beat and 1950s rock and roll, their sound incorporated elements of classical music and traditional pop in innovative ways; the band later explored music styles ranging from ballads and Indian music to psychedelia and hard rock.
                         </p>
                     </div>
                 </div>
@@ -63,8 +63,8 @@
         </div>
         <div class="container-fluid">
             <div class="row paul-john">
-                <div class="col-6 col-sm-3">
-                    <img src="assets/img/Paul1.jpg" alt="Paul McCartney" class="paul-george">
+                <div class="col-6 col-sm-3 center-image">
+                    <img src="assets/img/Paul1.jpg" alt="Paul McCartney" class="paul-george img-fluid">
                 </div>
                 <div class="col-6 col-sm-3">
                     <h3>Paul McCartney <i class=""></i></h3>
