--- a/beatles/book-us.html
+++ b/beatles/book-us.html
@@ -84,7 +84,9 @@
                     <input type="text" class="form-control" id="inputPostCode">
                     </div>
                 </div>
+                <div>
                 <button type="submit" class="btn btn-primary submit-button">Submit</button>
+                </div>
             </form>
         </div>
     </section>
