Implement flex and justify content classes to enable picture manipulation

--- a/beatles/home.html
+++ b/beatles/home.html
@@ -62,8 +62,8 @@
             </div>
         </div>
         <div class="container-fluid">
-            <div class="row paul-john">
-                <div class="col-6 col-sm-3 center-image">
+            <div class="row paul-john ">
+                <div class="col-6 col-sm-3 center-image d-flex justify-content-end">
                     <img src="assets/img/Paul1.jpg" alt="Paul McCartney" class="paul-george img-fluid">
                 </div>
                 <div class="col-6 col-sm-3">
