Add Discography subheading and grid structure with placeholder images&text

--- a/beatles/discography.html
+++ b/beatles/discography.html
@@ -43,6 +43,139 @@
         </nav>
         
     </header>
+    <section>
+        <div class="container">
+            <div class="row">
+                <h2 class="subheading">Studio Albums</h2>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
+                    <div>
+                        <div>
+                            <img src="assets/img/Paul1.jpg" alt="Paul McCartney" class="pjgr img-fluid">
+                        </div>
+                        <div>
+                            <h4>Please Please Me</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
+                    <div>
+                        <div>
+                            <img src="assets/img/Paul1.jpg" alt="Paul McCartney" class="pjgr img-fluid">
+                        </div>
+                        <div>
+                            <h4>Please Please Me</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
+                    <div>
+                        <div>
+                            <img src="assets/img/Paul1.jpg" alt="Paul McCartney" class="pjgr img-fluid">
+                        </div>
+                        <div>
+                            <h4>Please Please Me</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
+                    <div>
+                        <div>
+                            <img src="assets/img/Paul1.jpg" alt="Paul McCartney" class="pjgr img-fluid">
+                        </div>
+                        <div>
+                            <h4>Please Please Me</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
+                    <div>
+                        <div>
+                            <img src="assets/img/Paul1.jpg" alt="Paul McCartney" class="pjgr img-fluid">
+                        </div>
+                        <div>
+                            <h4>Please Please Me</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
+                    <div>
+                        <div>
+                            <img src="assets/img/Paul1.jpg" alt="Paul McCartney" class="pjgr img-fluid">
+                        </div>
+                        <div>
+                            <h4>Please Please Me</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
+                    <div>
+                        <div>
+                            <img src="assets/img/Paul1.jpg" alt="Paul McCartney" class="pjgr img-fluid">
+                        </div>
+                        <div>
+                            <h4>Please Please Me</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
+                    <div>
+                        <div>
+                            <img src="assets/img/Paul1.jpg" alt="Paul McCartney" class="pjgr img-fluid">
+                        </div>
+                        <div>
+                            <h4>Please Please Me</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
+                    <div>
+                        <div>
+                            <img src="assets/img/Paul1.jpg" alt="Paul McCartney" class="pjgr img-fluid">
+                        </div>
+                        <div>
+                            <h4>Please Please Me</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
+                    <div>
+                        <div>
+                            <img src="assets/img/Paul1.jpg" alt="Paul McCartney" class="pjgr img-fluid">
+                        </div>
+                        <div>
+                            <h4>Please Please Me</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
+                    <div>
+                        <div>
+                            <img src="assets/img/Paul1.jpg" alt="Paul McCartney" class="pjgr img-fluid">
+                        </div>
+                        <div>
+                            <h4>Please Please Me</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
+                    <div>
+                        <div>
+                            <img src="assets/img/Paul1.jpg" alt="Paul McCartney" class="pjgr img-fluid">
+                        </div>
+                        <div>
+                            <h4>Please Please Me</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
