Perfect Discography grid system before implementing remaining images and links

--- a/beatles/book-us.html
+++ b/beatles/book-us.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navbar">
 
 	        <a class="navbar-brand" href="home.html">
-		        <img class="img-fluid" src="assets/img/Beatles1.jpg" alt="Logo" title="Logo" style="height: 7rem;"/>
+		        <img class="img-fluid" src="assets/img/Beatles1.jpg" alt="Logo" title="Logo" style="height: 6rem;"/>
 	        </a>
 ​
 	        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -84,7 +84,7 @@
                     <input type="text" class="form-control" id="inputPostCode">
                     </div>
                 </div>
-                <div>
+                <div class="d-flex justify-content-center submit-button-rw">
                 <button type="submit" class="btn btn-primary submit-button">Submit</button>
                 </div>
             </form>
