--- a/beatles/discography.html
+++ b/beatles/discography.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navbar">
 
 	        <a class="navbar-brand" href="home.html">
-		        <img class="img-fluid" src="assets/img/Beatles1.jpg" alt="Logo" title="Logo" style="height: 7rem;"/>
+		        <img class="img-fluid" src="assets/img/Beatles1.jpg" alt="Logo" title="Logo" style="height: 6rem;"/>
 	        </a>
 ​
 	        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -49,129 +49,129 @@
                 <h2 class="subheading">Studio Albums</h2>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
-                    <div>
-                        <div>
-                            <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="pjgr img-fluid">
-                        </div>
-                        <div>
-                            <h4>Please Please Me</h4>
-                        </div>
-                    </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
+                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                            <div>
+                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
+                            </div>
+                            <div>
+                                <h4>Please Please Me</h4>
+                            </div>
+                        </a>
                 </div>
-                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
-                    <div>
-                        <div>
-                            <img src="assets/img/Paul1.jpg" alt="With The Beatles" class="pjgr img-fluid">
-                        </div>
-                        <div>
-                            <h4>With The Beatles</h4>
-                        </div>
-                    </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
+                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                            <div>
+                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
+                            </div>
+                            <div>
+                                <h4>Please Please Me</h4>
+                            </div>
+                        </a>
                 </div>
-                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
-                    <div>
-                        <div>
-                            <img src="assets/img/Paul1.jpg" alt="A Hard Day's Night" class="pjgr img-fluid">
-                        </div>
-                        <div>
-                            <h4>A Hard Day's Night</h4>
-                        </div>
-                    </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
+                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                            <div>
+                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
+                            </div>
+                            <div>
+                                <h4>Please Please Me</h4>
+                            </div>
+                        </a>
                 </div>
-                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
-                    <div>
-                        <div>
-                            <img src="assets/img/Paul1.jpg" alt="Beatles For Sale" class="pjgr img-fluid">
-                        </div>
-                        <div>
-                            <h4>Beatles For Sale</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
-                    <div>
-                        <div>
-                            <img src="assets/img/Paul1.jpg" alt="Help!" class="pjgr img-fluid">
-                        </div>
-                        <div>
-                            <h4>Help!</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
-                    <div>
-                        <div>
-                            <img src="assets/img/Paul1.jpg" alt="Rubber Soul" class="pjgr img-fluid">
-                        </div>
-                        <div>
-                            <h4>Rubber Soul</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
-                    <div>
-                        <div>
-                            <img src="assets/img/Paul1.jpg" alt="Revolver" class="pjgr img-fluid">
-                        </div>
-                        <div>
-                            <h4>Revolver</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
-                    <div>
-                        <div class=" d-flex justify-content-center">
-                            <img src="assets/img/Paul1.jpg" alt="Sgt Pepper’s Lonely Hearts Club Band" class="pjgr img-fluid">
-                        </div>
-                        <div>
-                            <h4>Sgt Pepper’s Lonely Hearts Club Band</h4>
-                        </div>
-                    </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
+                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                            <div>
+                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
+                            </div>
+                            <div>
+                                <h4>Please Please Me</h4>
+                            </div>
+                        </a>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
-                    <div>
-                        <div class=" d-flex justify-content-center">
-                            <img src="assets/img/Paul1.jpg" alt="The Beatles (White Album)" class="pjgr img-fluid">
-                        </div>
-                        <div>
-                            <h4>The Beatles (White Album)</h4>
-                        </div>
-                    </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
+                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                            <div>
+                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
+                            </div>
+                            <div>
+                                <h4>Please Please Me</h4>
+                            </div>
+                        </a>
                 </div>
-                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
-                    <div>
-                        <div>
-                            <img src="assets/img/Paul1.jpg" alt="Yellow Submarine" class="pjgr img-fluid">
-                        </div>
-                        <div>
-                            <h4>Yellow Submarine</h4>
-                        </div>
-                    </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
+                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                            <div>
+                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
+                            </div>
+                            <div>
+                                <h4>Please Please Me</h4>
+                            </div>
+                        </a>
                 </div>
-                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
-                    <div>
-                        <div>
-                            <img src="assets/img/Paul1.jpg" alt="Abbey Road" class="pjgr img-fluid">
-                        </div>
-                        <div>
-                            <h4>Abbey Road</h4>
-                        </div>
-                    </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
+                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                            <div>
+                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
+                            </div>
+                            <div>
+                                <h4>Please Please Me</h4>
+                            </div>
+                        </a>
                 </div>
-                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center">
-                    <div>
-                        <div>
-                            <img src="assets/img/Paul1.jpg" alt="Let It Be" class="pjgr img-fluid">
-                        </div>
-                        <div>
-                            <h4>Let It Be</h4>
-                        </div>
-                    </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
+                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                            <div>
+                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
+                            </div>
+                            <div>
+                                <h4>Please Please Me</h4>
+                            </div>
+                        </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
+                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                            <div>
+                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
+                            </div>
+                            <div>
+                                <h4>Please Please Me</h4>
+                            </div>
+                        </a>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
+                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                            <div>
+                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
+                            </div>
+                            <div>
+                                <h4>Please Please Me</h4>
+                            </div>
+                        </a>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
+                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                            <div>
+                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
+                            </div>
+                            <div>
+                                <h4>Please Please Me</h4>
+                            </div>
+                        </a>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
+                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                            <div>
+                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
+                            </div>
+                            <div>
+                                <h4>Please Please Me</h4>
+                            </div>
+                        </a>
                 </div>
             </div>
         </div>
